--- a/Poengrenn.Web/package.json
+++ b/Poengrenn.Web/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
+    "@angular/common": "4.1.1",
+    "@angular/compiler": "4.1.1",
+    "@angular/core": "4.1.1",
+    "@angular/forms": "4.1.1",
+    "@angular/http": "4.1.1",
+    "@angular/platform-browser": "4.1.1",
+    "@angular/platform-browser-dynamic": "4.1.1",
+    "@angular/router": "4.1.1",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.25",
     "angular2-moment": "^1.3.3",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "4.1.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
