--- a/Poengrenn.API/Poengrenn.DAL/Poengrenn.DAL.csproj
+++ b/Poengrenn.API/Poengrenn.DAL/Poengrenn.DAL.csproj
@@ -1,106 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{487BC154-8A44-488C-BDB9-45BCBA07F65D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Poengrenn.DAL</RootNamespace>
-    <AssemblyName>Poengrenn.DAL</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>net10.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-preview.1.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0-preview.1.*" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="EFRepository\BaseRepository.cs" />
-    <Compile Include="EFRepository\EFPoengrennRepository.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Migrations\201708192242077_Initial.cs" />
-    <Compile Include="Migrations\201708192242077_Initial.Designer.cs">
-      <DependentUpon>201708192242077_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201708261643379_AddedDeltakerBetalingsNotat.cs" />
-    <Compile Include="Migrations\201708261643379_AddedDeltakerBetalingsNotat.Designer.cs">
-      <DependentUpon>201708261643379_AddedDeltakerBetalingsNotat.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201801282044348_StartInterval.cs" />
-    <Compile Include="Migrations\201801282044348_StartInterval.Designer.cs">
-      <DependentUpon>201801282044348_StartInterval.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201801282237137_AddedLagNummer.cs" />
-    <Compile Include="Migrations\201801282237137_AddedLagNummer.Designer.cs">
-      <DependentUpon>201801282237137_AddedLagNummer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Konkurranse.cs" />
-    <Compile Include="Models\KonkurranseDeltaker.cs" />
-    <Compile Include="Models\KonkurranseKlasse.cs" />
-    <Compile Include="Models\KonkurranseType.cs" />
-    <Compile Include="Models\Person.cs" />
-    <Compile Include="Models\PoengrennContext.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Remove="Migrations\\**\\*.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201708192242077_Initial.resx">
-      <DependentUpon>201708192242077_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201708261643379_AddedDeltakerBetalingsNotat.resx">
-      <DependentUpon>201708261643379_AddedDeltakerBetalingsNotat.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801282044348_StartInterval.resx">
-      <DependentUpon>201801282044348_StartInterval.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801282237137_AddedLagNummer.resx">
-      <DependentUpon>201801282237137_AddedLagNummer.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
