Convert to Postgres instead of SQL

--- a/Poengrenn.API/Poengrenn.API/appsettings.json
+++ b/Poengrenn.API/Poengrenn.API/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "PoengrennContext": "Server=localhost;Database=Poengrenn;Integrated Security=true;TrustServerCertificate=true"
+    "PoengrennContext": "Host=localhost;Database=Poengrenn;Username=postgres;Password=postgres"
   }
 }
