--- a/Poengrenn.API/Poengrenn.API/Poengrenn.API.csproj
+++ b/Poengrenn.API/Poengrenn.API/Poengrenn.API.csproj
@@ -14,7 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0-preview.1.*" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-preview.1.*" />
   </ItemGroup>
 
   <ItemGroup>
