--- a/Poengrenn.API/Poengrenn.DAL/Poengrenn.DAL.csproj
+++ b/Poengrenn.API/Poengrenn.DAL/Poengrenn.DAL.csproj
@@ -9,9 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-preview.1.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0-preview.1.*" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-preview.1.*" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="Migrations\\**\\*.cs" />
-  </ItemGroup>
 </Project>
