--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,9 @@
 FROM mcr.microsoft.com/devcontainers/base:ubuntu-22.04
 
 ARG DOTNET_VERSION=10.0.101
-ARG NODE_VERSION=8.17.0
-ARG ANGULAR_CLI_VERSION=1.0.2
+ARG DOTNET_EF_VERSION=10.0.0-preview.1.*
+ARG NODE_VERSION=20.18.1
+ARG ANGULAR_CLI_VERSION=20.0.0
 
 SHELL ["/bin/bash", "-c"]
 
@@ -20,6 +21,11 @@ RUN curl -fsSL https://dot.net/v1/dotnet-install.sh -o /tmp/dotnet-install.sh \
 ENV DOTNET_ROOT=/usr/share/dotnet
 ENV PATH="/usr/share/dotnet:${PATH}"
 
+RUN dotnet tool install --tool-path /usr/local/bin dotnet-ef --version ${DOTNET_EF_VERSION}
+
+RUN echo "alias dc='docker compose'" >> /etc/bash.bashrc \
+  && echo "alias dc='docker compose'" >> /etc/zsh/zshrc
+
 ENV NVM_DIR=/usr/local/share/nvm
 RUN mkdir -p ${NVM_DIR} \
   && curl -fsSL https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh -o /tmp/nvm-install.sh \
@@ -29,6 +35,7 @@ RUN mkdir -p ${NVM_DIR} \
   && nvm alias default ${NODE_VERSION} \
   && nvm use default \
   && npm install -g @angular/cli@${ANGULAR_CLI_VERSION} \
+  && npm install -g pnpm@10.27.0 \
   && chmod -R a+rX ${NVM_DIR} \
   && rm /tmp/nvm-install.sh
 
