--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,18 +2,26 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "baseUrl": "src",
+    "baseUrl": ".",
+    "paths": {
+      "app/*": [
+        "src/app/*"
+      ]
+    },
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
+    "downlevelIteration": true,
+    "moduleResolution": "bundler",
+    "importHelpers": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "useDefineForClassFields": false,
+    "target": "ES2022",
+    "module": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2016",
+      "ES2022",
       "dom"
     ]
   }
