--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,10 @@
     "context": ".."
   },
   "workspaceFolder": "/workspaces/poengrenn",
+  "runArgs": [
+    "--env-file",
+    ".devcontainer/.env"
+  ],
   "forwardPorts": [
     8080,
     4200,
@@ -12,7 +16,8 @@
   ],
   "postCreateCommand": "dotnet --info",
   "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/azure-cli:1": {}
   },
   "customizations": {
     "vscode": {
