--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:10.0.101 AS build
+FROM mcr.microsoft.com/dotnet/sdk:10.0-preview AS build
 
 WORKDIR /src
 
@@ -18,6 +18,8 @@ WORKDIR /app
 
 ENV ASPNETCORE_URLS=http://0.0.0.0:8080
 ENV PORT=8080
+ENV DOTNET_ROLL_FORWARD=LatestMajor
+ENV DOTNET_ROLL_FORWARD_TO_PRERELEASE=1
 
 COPY --from=build /app/publish .
 
