--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -16,6 +16,10 @@ FROM mcr.microsoft.com/dotnet/aspnet:10.0-preview AS runtime
 
 WORKDIR /app
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends libgssapi-krb5-2 \
+    && rm -rf /var/lib/apt/lists/*
+
 ENV ASPNETCORE_URLS=http://0.0.0.0:8080
 ENV PORT=8080
 ENV DOTNET_ROLL_FORWARD=LatestMajor
